--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>fest-assert-core</artifactId>
             <version>2.0M10</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.android</groupId>
+            <artifactId>android</artifactId>
+            <version>1.5_r4</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
