--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
             <version>4.1.1.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.squareup</groupId>
+            <artifactId>fest-android</artifactId>
+            <version>1.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
