--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.momus.SoundTent"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="0.1b">
 
     <uses-sdk android:targetSdkVersion="19" android:minSdkVersion="14"/>
 
