Migrate project to gradle - src compiling, but tests are broken

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-bin
-target
-gen
-out
-private
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+
+# Android Studio
 .idea
+*.iml
