--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ android {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
+        exclude 'LICENSE'
+        exclude 'NOTICE'
     }
 }
 
@@ -32,6 +34,13 @@ dependencies {
     compile 'org.roboguice:roboguice:2.0'
     compile ('com.google.inject.extensions:guice-assistedinject:3.0') {
         exclude group: 'com.google.inject', module: 'guice'
-
     }
+
+    testCompile ('com.squareup.assertj:assertj-android:1.0.0'){
+        exclude group: 'com.android.support', module:'support-annotations'
+    }
+    testCompile 'junit:junit:4.11'
+    testCompile 'org.robolectric:robolectric:2.2'
+    testCompile 'org.mockito:mockito-all:1.9.5'
+    testCompile 'com.googlecode.catch-exception:catch-exception:1.2.0'
 }
